refactor: 리뷰 반영(Person 패키지, toList 수정, 롬복 Getter 제거, UseCase 클래스명 추가)